@@ -1,7 +1,7 @@
 \name{BarText}
 \alias{BarText}
 %- Also NEED an '\alias' for EACH other topic documented here.
-\title{Add the Value Labels to a Barplot
+\title{Place Value Labels on a Barplot
 %%  ~~function to do ... ~~
 }
 \description{Place text either in the middle of the stacked bars of a barplot or on top of a side by side barplot.
@@ -9,7 +9,9 @@
 }
 \usage{
 BarText(height, b, labels = height, beside = FALSE, horiz = FALSE,
-        cex = par("cex"), adj = NULL, top = TRUE, offset = 0, ...)
+        cex = par("cex"), adj = NULL, 
+        pos = c("topout", "topin", "mid", "bottomin", "bottomout"), 
+        offset = 0, ...)
 }
 %- maybe also 'usage' for other objects documented here.
 \arguments{
@@ -31,7 +33,8 @@ BarText(height, b, labels = height, beside = FALSE, horiz = FALSE,
 \item{cex}{numeric character expansion factor; multiplied by \code{\link{par}}\code{("cex")} yields the final character size. \code{NULL} and \code{NA} are equivalent to \code{1.0}.}
 \item{adj}{one or two values in [0, 1] which specify the x (and optionally y) adjustment of the labels. On most devices values outside that interval will also work.}
 
-\item{top}{logical, defining if the labels should be placed on top of the bars (or above the bottom, if height is negative). Will be ignored if \code{beside} is \code{FALSE}.}
+\item{pos}{one of \code{"topout"}, \code{"topin"}, \code{"mid"}, \code{"bottomin"}, \code{"bottomout"}, 
+defining if the labels should be placed on top of the bars (inside or outside) or at the bottom of the bars (inside or outside). Will be ignored if \code{beside} is \code{FALSE}.}
 
 \item{offset}{a vector indicating how much the bars should be shifted relative to the x axis.}
 
@@ -46,6 +49,10 @@ Notice that when the labels are placed on top of the bars, they may be clipped. 
 \author{Andri Signorell <andri@signorell.net>
 }
 
+
+\value{returns the geometry of the labels invisibly}
+
+
 \seealso{\code{\link{help}}
 %% ~~objects to See Also as \code{\link{help}}, ~~~
 }
@@ -58,7 +65,7 @@ BarText(x, b, x)
 # more complicated
 b <- barplot(VADeaths, horiz = FALSE, col=hblue, beside = TRUE)
 BarText(VADeaths, b=b, horiz = FALSE, beside = TRUE, cex=0.8)
-BarText(VADeaths, b=b, horiz = FALSE, beside = TRUE, cex=0.8, top=FALSE,
+BarText(VADeaths, b=b, horiz = FALSE, beside = TRUE, cex=0.8, pos="bottomin",
         col="white", font=2)
 
 b <- barplot(VADeaths, horiz = TRUE, col=hblue, beside = TRUE)
@@ -69,6 +76,18 @@ BarText(VADeaths, b=b)
 
 b <- barplot(VADeaths, horiz = TRUE)
 BarText(VADeaths, b=b, horiz = TRUE, col="red", cex=1.5)
+
+
+# position of the text
+par(mfrow=c(3,2))
+off <- c(10, 4, 1, 20, -15)
+
+for(pos in eval(formals(BarText)$pos)) {
+  b <- barplot(x, offset=off, 
+  main=gettextf("Textposition pos = '\%s'", pos), horiz=TRUE)
+  abline(h=0)
+  BarText(x, b, x, offset = off, pos=pos, cex=1.5, horiz=TRUE)
+}
 }
 % Add one or more standard keywords, see file 'KEYWORDS' in the
 % R documentation directory.
