@@ -1,5 +1,6 @@
 \name{DescTools Aliases}
 \alias{N}
+
 %- Also NEED an '\alias' for EACH other topic documented here.
 \title{Some Aliases Set for Convenience
 %%  ~~function to do ... ~~
@@ -11,7 +12,8 @@
 N()
 }
 %- maybe also 'usage' for other objects documented here.
-\details{\code{N()} is the same as \code{\link{as.numeric}()}
+\details{\code{N()} is the same as \code{\link{as.numeric}()}.\cr
+\code{D()} is the same as \code{\link{as.Date}()}
 %%  ~~ If necessary, more details than the description above ~~
 }
 \author{Andri Signorell <andri@signorell.net>
